<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPhoneAuth"
    android:orientation="vertical"
    android:weightSum="100">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:contentDescription="@string/img" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_phoneno_box"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:hint="@string/user_phoneno">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mobileno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        />

    <Button
        android:id="@+id/getotp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/getotp"/>

</LinearLayout>