<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lato_bold"
        android:padding="16dp"
        android:text="@string/bottomsheet_verify_title"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/bottomsheet_verify_desc"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/theme_color"
        android:gravity="center_horizontal"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHighlight="@color/theme_color_light"
        android:textColorLink="@color/theme_color"
        android:textSize="18sp"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="40"
            android:background="@drawable/btn_getotp"
            android:clickable="true"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="@color/theme_color"
            android:focusable="true" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30" />

    </LinearLayout>

</LinearLayout>